package com.portfolio.mgmtsys.enumeration;

public enum FundTradeType {
    SUBSCRIBE, REDEEM
}
