package com.portfolio.mgmtsys.enumeration;

public enum TradeType {
    SELL,
    BUY
}
